# novelsaga

./: .cspell.yml  .envrc  .gitattributes  .gitignore  .lint-staged.mts  .prettierignore  .prettierrc.mts  .vscodeignore  CROSS_COMPILE.md  Cargo.toml  LICENSE  README.md  cspell.config.mjs  eslint.config.mts  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.json
.cargo/: config
.husky/: pre-commit  prepare-commit-msg
projects/client/: build.mjs  build.mts  package.json  tsconfig.json
projects/client/src/: extension.ts
projects/client/src/macros/: index.ts
projects/novelsaga-cli/: Cargo.toml
projects/novelsaga-cli/src/: main.rs
projects/novelsaga-cli/src/args/: mod.rs
projects/novelsaga-cli/src/config/schema/: fmt.rs
projects/novelsaga-cli/src/core/: formatter.rs  mod.rs
projects/novelsaga-cli/src/home_path/: mod.rs
projects/novelsaga-cli/src/lsp/: backend.rs  mod.rs
projects/novelsaga-cli/src/plugins/: consts.rs
projects/server/: Cargo.toml
projects/server/src/: lib.rs  main.rs
projects/server/src/args/: mod.rs
projects/server/src/config/: loader.rs  mod.rs  schema.rs
projects/server/src/config/schema/: mod.rs
projects/server/src/core/: formatter.rs
projects/server/src/lsp/: backend.rs  mod.rs
projects/utils-dev/: package.json  tsconfig.json
projects/utils-dev/src/: getCliMainCargoToml.ts  getRoot.ts  index.ts
test-workspace/: .novelsaga.toml  test.md  test.txt  workspaces.code-workspace
test-workspace/workspace1/: .novelsaga.toml  test.md  test.txt
test-workspace/workspace2/: .novelsaga.toml
