[workspace]
resolver = "3"
members = ["projects/server"]

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units to improve optimization
strip = true        # Strip symbols from binary
