[workspace]
  members  = ["projects/novelsaga-cli"]
  resolver = "3"

  [workspace.lints.clippy]
    all      = "warn"
    pedantic = "warn"

[profile.release]
  codegen-units = 1    # Reduce parallel code generation units to improve optimization
  lto           = true # Enable Link Time Optimization
  opt-level     = "z"  # Optimize for size
  strip         = true # Strip symbols from binary
