[package]
  edition = "2024"
  name    = "novelsaga-cli"
  version = "0.0.0"

[lints]
  workspace = true

[[bin]]
  name = "novelsaga"
  path = "src/main.rs"

[dependencies]
  clap            = { version = "4.5.52", features = ["string", "env", "unicode", "derive"] }
  config          = { version = "0.15.19", features = ["toml", "yaml", "json", "json5", "ron", "corn"] }
  directories     = "^6.0"
  pangu           = "0.3.0"
  path-absolutize = "^3.1"
  serde           = { version = "1.0", features = ["derive"] }
  serde_json      = "1.0"
  tokio           = { version = "1", features = ["io-std", "io-util", "macros", "rt", "sync"] }
  tokio-util      = { version = "0.7.17", features = ["compat"] }
  tower-lsp       = "0.20"
  wasmtime        = "39.0.1"
  wasmtime-wasi   = { version = "39.0.1", features = ["p2"] }
