[package]
name = "novelsaga-server"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[[bin]]
name = "novelsaga_server"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = [
  "io-std",
  "io-util",
  "macros",
  "rt",
  "sync",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7.17", features = ["compat"] }
pangu = "0.3.0"
clap = { version = "4.5.52", features = ["string", "env", "unicode", "derive"] }
config = { version = "0.15.19", features = [
  "toml",
  "yaml",
  "json",
  "json5",
  "ron",
  "corn",
] }
boa_engine = { version = "0.21.0", features = [
  "intl",
  "deser",
  "annex-b",
  "temporal",
  "js",
] }